add RabbitMQ
